src/components/WelcomeModal/style.css
html {
    --car-color: #27AE60;
  }
  
.carousel-cont{
    width: 95%;
    position: relative;
    font-family: Arial sans-serif;
    /* border:3px dotted blue; */
    height: 450px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}
.rec-swipable-null{
    /* height: 300px; */
}
.rec-arrow{
    /* background-color: var(--car-color); */
}
.rec-dot{
    /* background-color: var(--car-color); */
}

.welcome--slide-image{
    /* min-width: 400px; */
    width: 400px;
    height: auto;
}

.welcome--slide-image-wrapper{
    display: flex;
    justify-content: center;
}

.welcome--slide-container {
    display: flex;
    flex-direction: column;
    /* width: 500px; */
    /* width: 100%; */
}
.welcome--slide-text{
    /* width: 400px; */
    font-size: 20px;
    margin-bottom: 10px;
    min-height: 100px;
    /* display: flex; */
    /* border: 1px solid blue; */

}
.welcome--image-container{
    /* height: 35px; */
    display: flex;
}
.rec-pagination{
    
}

